--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
             <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Clarence Taylor</span>
+                <span class="d-block d-lg-none">Md Mahibul Hasan</span>
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span>
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -40,19 +40,29 @@
             <section class="resume-section" id="about">
                 <div class="resume-section-content">
                     <h1 class="mb-0">
-                        Clarence
-                        <span class="text-primary">Taylor</span>
+                        MD MAHIBUL
+                        <span class="text-primary">HASAN</span>
                     </h1>
                     <div class="subheading mb-5">
-                        3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        REGINA, SASKATCHEWAN  (306) 351-2982 ·
+                        <a href="mailto:mahibul07hasan@email.com">mahibul07hasan@email.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <!-- About Myself -->
+               
+                    <p class="lead mb-5">
+                        I’m Mahibul, co-founder of <a href="https://www.sasktechlab.com/" target="_blank">SaskTech Lab</a>, a Regina-based engineering startup focused on bridging the experience gap for recent graduates while delivering high-quality solutions to businesses. At SaskTech Lab, we combine commercial engineering services with structured mentorship to nurture talent and provide real-world impact.
+                        In parallel, I’m pursuing a Master’s in Computer Science, conducting research on privacy-preserving intrusion detection systems in 5G and beyond networks using AI and ML. I’m passionate about developing secure and scalable AI-driven cloud solutions for modern infrastructures.
+                    </p>
+                    <p class="lead mb-5">
+                        Previously, at <a target="_blank" href="https://www.grameenphone.com/"> Grameenphone Ltd. </a> , I served as a Solutions Architect, leading high-impact transformation projects across both Telco and IT cloud domains. My work included designing and delivering core telecom services such as LTE roaming and large-scale traffic migration. Prior to that, I worked as a freelance web application developer on <a href="https://www.upwork.com/" target="_blank"> Upwork</a>, helping global clients build custom solutions using open-source technologies.
+                    </p>
+                    <p class="lead mb-5">
+                        I’m always driven to acquire cutting-edge technical skills and apply them to build practical, impactful systems in the fields of AI, cloud, and networking.
+                    </p>
+
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/mahibulhasan/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://github.com/mdmahibulhasan"><i class="fab fa-github"></i></a>
                     </div>
                 </div>
             </section>
@@ -63,36 +73,45 @@
                     <h2 class="mb-5">Experience</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Senior Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Bring to the table win-win survival strategies to ensure proactive domination. At the end of the day, going forward, a new normal that has evolved from generation X is on the runway heading towards a streamlined cloud solution. User generated content in real-time will have multiple touchpoints for offshoring.</p>
+                            <h3 class="mb-0">Graduate Research Assistant</h3>
+                            <div class="subheading mb-3">University of Regina</div>
+                            <p>coming...</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">March 2013 - Present</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2023 - Present</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Developer</h3>
-                            <div class="subheading mb-3">Intelitec Solutions</div>
-                            <p>Capitalize on low hanging fruit to identify a ballpark value added activity to beta test. Override the digital divide with additional clickthroughs from DevOps. Nanotechnology immersion along the information highway will close the loop on focusing solely on the bottom line.</p>
+                            <h3 class="mb-0">Lead Engineer – Infrastructure, Cloud Platforms and Security Management</h3>
+                            <div class="subheading mb-3">Grameenphone</div>
+                            <p>coming...</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">December 2011 - March 2013</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2021 - January 2023</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <h3 class="mb-0">Lead Engineer – Core Network Planning and Deployment</h3>
+                            <div class="subheading mb-3">Grameenphone</div>
+                            <p>coming...</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">December 2018 - December 2020</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+                            <h3 class="mb-0">Senior System Engineer – Core Network Planning and Deployment</h3>
+                            <div class="subheading mb-3">Grameenphone</div>
+                            <p>coming...</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">February 2017 - December 2018</span></div>
                     </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">System Engineer – Core Network Planning and Deployment</h3>
+                            <div class="subheading mb-3">Grameenphone</div>
+                            <p>coming...</p>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">December 2013 - January 2017</span></div>
+                    </div>
+
                 </div>
             </section>
             <hr class="m-0" />
@@ -102,20 +121,20 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <h3 class="mb-0">University of Regina</h3>
+                            <div class="subheading mb-3">Master’s of Science</div>
+                            <div>Computer Science - Thesis</div>
+                            <p>GPA: 3.88</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2023 - June 2025</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">Bangldesh University of Engineer & Technology</h3>
+                            <div class="subheading mb-3">Bsc in Electrical and Eelectronic Engineering</div>
+                            <p>GPA: 3.45</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">January 2008 - April 2013</span></div>
                     </div>
                 </div>
             </section>
@@ -165,8 +184,9 @@
             <section class="resume-section" id="interests">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Interests</h2>
-                    <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
+                    <!-- <p>Apart from being a web developer, I enjoy most of my time being outdoors. In the winter, I am an avid skier and novice ice climber. During the warmer months here in Colorado, I enjoy mountain biking, free climbing, and kayaking.</p>
                     <p class="mb-0">When forced indoors, I follow a number of sci-fi and fantasy genre movies and television shows, I am an aspiring chef, and I spend a large amount of my free time exploring the latest technology advancements in the front-end web development world.</p>
+                -->
                 </div>
             </section>
             <hr class="m-0" />
@@ -174,6 +194,7 @@
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Awards & Certifications</h2>
+                    <!-- 
                     <ul class="fa-ul mb-0">
                         <li>
                             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
@@ -214,6 +235,7 @@
                             Place - James Buchanan High School - Hackathon 2005
                         </li>
                     </ul>
+                    -->
                 </div>
             </section>
         </div>
