--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/mahibulhasan/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/mdmahibulhasan"><i class="fab fa-github"></i></a>
+                            <a class="social-icon" href="https://medium.com/@mahibulhasan" target="_blank"><i class="fab fa-medium-m"></i>
                     </div>
                 </div>
             </section>
